<resources>
    <string name="app_name">Assignment_Project_014</string>

    <!--    TICKETMASTER STRING  -->
    <string name="ticketmaster_search_title">Search Events</string>
    <string name="ticketmaster_details_title">Event Details: </string>
    <string name="ticketmaster_favorite_title">Saved Events: </string>
    <string name="ticketmaster_city_name">City Name</string>
    <string name="ticketmaster_city_name_tv">Enter City Name</string>
    <string name="ticketmaster_radius">Radius</string>
    <string name="ticketmaster_radius_tv">Enter Radius</string>
    <string name="ticketmaster_search">Search Events</string>
    <string name="ticketmaster_saved">Saved Events</string>
    <string name="ticketmaster_name">Name: </string>
    <string name="ticketmaster_date">Starting Date: </string>
    <string name="ticketmaster_min_price">Min Price: </string>
    <string name="ticketmaster_max_price">Max Price: </string>
    <string name="ticketmaster_url">URL: </string>
    <string name="ticketmaster_navigation_open">Open</string>
    <string name="ticketmaster_navigation_close">Close</string>
    <string name="ticketmaster_event_image">Promotion Image</string>
    <string name="ticketmaster_event_remove_from_saved">Remove from My List </string>
    <string name="ticketmaster_event_add_to_saved">Save to My List</string>
    <string name="ticketmaster_confirm">Confirm </string>
    <string name="ticketmaster_yes">Yes</string>
    <string name="ticketmaster_no">No</string>
    <string name="ticketmaster_save_success">Save successfully </string>
    <string name="ticketmaster_remove_confirm">Would you like to remove this event? </string>
    <string name="ticketmaster_remove_success">Remove successfully </string>
    <string name="ticketmaster_go_to_saved">Go to Saved Events </string>
    <string name="ticketmaster_alert_title">Alert: </string>
    <string name="ticketmaster_alert_message">City Name and Radius can not be empty</string>
    <string name="ticketmaster_help_title">Help</string>
    <string name="ticketmaster_help_infor">Please enter city name and radius to search the events</string>
    <string name="ticketmaster_about">Developed By: Xingan Wang
                                      \nStudent No: 040981582</string>
    <string name="ticketmaster_go_to_search">Go search by Country and Radius.</string>
    <string name="ticketmaster_title">TicketMaster Event Search</string>
    <string name="ticketmaster_auther">Xingan Wang</string>





    <!--    RECIPE STRING  -->
    <string name="my_favourite">My Favourite</string>
    <string name="search_text_button">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="recipe_URL">URL</string>
    <string name="Search_Result">Search Result</string>
    <string name="recipe_title">Recipe</string>
    <string name="search_hint">Search Recipe Here</string>
    <string name="recipe">Recipe</string>
    <string name="title">title</string>
    <string name="content">content</string>
    <string name="url">URL</string>
    <string name="chunyan_ren">Chunyan Ren</string>
    <string name="ren00038_algonquinlive_com">ren00038@Algonquinlive.com</string>
    <string name="search_history">Search History</string>
    <string name="recipe_help">"1. User could search recipe by ingredients.
                            \n\n2. User could view the top 10 search results
                            \n retrived from http://www.recipepuppy.com.
                            \n\n3. User could save the ingredients they like
                            \nand to see it next time without access online data."</string>
    <string name="recipe_about">"Developed By: Chunyan Ren\nStudent No: 040980795"</string>
    <string name="recipe_version">"The current Version is V1.0.0"</string>
    <string name ="toast_load">Recipes have been loaded</string>
    <string name="snackbar_keep">Undo: To keep in my favourite list</string>
    <string name="snackbar_remove">Undo: To remove from my favourite list</string>
    <string name="snack_undo">"Undo"</string>
    <string name = "menu_item">Search Recipe</string>
    <string name = "menu_help">help</string>
    <string name = "menu_about">About</string>
    <string name = "menu_version">Version</string>
    <string name = "menu_description">Description</string>
    <string name = "search_hint2">Search Here</string>

    <!--    AUDIO STRING  -->

    <string name="search_by_artist">Search by Artist</string>
    <string name="audio_save">Save</string>
    <string name="audio_remove">Remove</string>
    <string name="audio_navigation_search">New Album</string>
    <string name="audio_navigation_local">Local Album</string>
    <string name="audio_navigation_album">Album Detail</string>
    <string name="audio_navigation_tacker">Tracker Info.</string>
    <string name="audio">Music</string>
    <string name="search_audio">Search audio</string>
    <string name="toast1">Get data from server.</string>>
    <string name="toast2">Searching album from server.</string>
    <string name="save_remove">Save/Remove</string>
    <string name="select_button">Please select one album.</string>

    <!--    COVID STRING  -->
    <string name="covid_search_btn">Query Data</string>
    <string name="covid_show_archived_btn">Archived</string>
    <string name="covid_Country_txt">COUNTRY:</string>
    <string name="covid_Date_txt">DATE:</string>
    <string name="covid_search_country_hint">Enter Country Name</string>
    <string name="covid_search_date_hint">yyyy-mm-dd</string>
    <string name="covid_search_result_Country_placeHolder">COUNTRY</string>
    <string name="covid_search_result_Date_placeHolder">yyyy-mm-dd</string>
    <string name="covid_result_archive_text">SAVE</string>
    <string name="covid_result_back_to_search_text">BACK</string>
    <string name="vovid_result_title">Search Result:</string>
    <string name="covid_province_header">Province</string>
    <string name="covid_case_header">Confirmed</string>
    <string name="covid19_content_description">COVID 19 API</string>
    <string name="covid_change_header">Daily</string>
    <string name="covid_archived_data_title">Archived Records</string>
    <string name="covid_country_header">Country</string>
    <string name="covid_total_header">Confirmed</string>
    <string name="covid_country_change_header">Daily</string>
    <string name="covid_date_header">Date</string>
    <string name="covid_archived_data_description">Click to see detail and Long click to delete item.</string>
    <string name="covid19_navi_search_data">Search Data</string>
    <string name="covid19_navi_last_review">Last Review</string>
    <string name="covid19_navi_archived_data">Archived Data</string>
    <string name="covid19_navi_help">Help</string>
    <string name="covid19_navi_about">About</string>
    <string name="covid19_navi_version">Version</string>


    <!-- ToolBar-->
    <string name ="button_title">Switch Channel</string>
    <string name ="button_yes">Yes</string>
    <string name ="button_back">Go back</string>
    <string name = "audio_button_meaasge">You are going to Audio channel</string>
    <string name = "Covid19_button_meaasge">You are going to Covid19 channel</string>
    <string name = "Recipe_button_meaasge">You are going to Recipe channel</string>
    <string name = "ticket_button_meaasge">You are going to ticket channel</string>

</resources>