<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#091450"
    android:orientation="vertical"
    tools:context="com.ac.assignment_project_014.covid19.Covid19SearchResultActivity">
    <include layout="@layout/covid19_actionbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vovid_result_title"
            android:textColor="#FFC107"/>


        <TextView
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/covid_search_result_Country_placeHolder"/>

        <TextView
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/covid_search_result_Date_placeHolder"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:padding="5dp">
        <Button
            android:id="@+id/covid_result_archive_btn"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:background="@drawable/covid_button_bg"
            android:text="@string/covid_result_archive_text"/>
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_toRightOf="@+id/covid_result_archive_btn"
            android:text="100"
            android:textSize="20dp"
            android:textColorHighlight="#FF9800"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/covid_result_back_to_search_btn"
            android:layout_alignParentEnd="true"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:background="@drawable/covid_button_bg"
            android:text="@string/covid_result_back_to_search_text"/>

    </RelativeLayout>

        <ListView
            android:id="@+id/covid_search_result_listView"
            android:layout_gravity="center_horizontal"
            android:layout_width="360dp"
            android:layout_marginVertical="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/covid_button_bg"/>
    </LinearLayout>
</LinearLayout>